# xiandong-tennis

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVLOG.md  Justfile  LICENSE  PROJECT_STATUS.md  README.md  README.zh.md  cliff.toml  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  deploy.yml
apps/web/: .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml
apps/web/app/: globals.css  page.tsx
apps/web/components/: confetti.tsx  progress-bar.tsx  question-card.tsx  quiz-screen.tsx  result-screen.tsx  share-card.tsx  welcome-screen.tsx
apps/web/e2e/: flow.spec.mjs
apps/web/lib/: api.ts  wasm.ts
apps/web/types/: index.ts  wasm.d.ts
crates/server/: Cargo.toml
crates/server/migrations/: 001_create_results.sql  002_create_venues.sql
crates/server/src/: config.rs  error.rs  main.rs  state.rs
crates/server/src/routes/: mod.rs  results.rs  stats.rs  venues.rs
crates/tennis-core/: Cargo.toml
crates/tennis-core/src/: lib.rs  personalities.rs  questions.rs  scorer.rs
crates/tennis-core/tests/: personalities_test.rs  questions_test.rs  scorer_test.rs
docs/: frontend-visual-qa.md
docs/operations/: manual-gates.md
docs/product/: venue-directory.md
docs/superpowers/plans/: 2026-06-15-tennis-personality.md
docs/superpowers/specs/: 2026-06-15-tennis-personality-design.md
tools/ci/: check-pr-body.mjs
