[package]
name = "xiandong-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "chrono"] }
serde.workspace = true
serde_json.workspace = true
tower-http = { version = "0.5", features = ["cors", "trace"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
xiandong-tennis-core = { path = "../tennis-core" }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
