[package]
edition = "2021"
name = "xiandong-server"
version = "0.1.0"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "migrate",
  "chrono",
] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xiandong-tennis-core = { path = "../tennis-core" }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
