[package]
edition = "2021"
name = "xiandong-tennis-core"
version = "0.1.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
serde.workspace = true
serde-wasm-bindgen = "0.6"
serde_json.workspace = true
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
